ADD: images, svg and variable scss

--- a/index.html
+++ b/index.html
@@ -3,14 +3,36 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Mi Emprendimiento Web</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/main.css">
 </head>
 
 <body>
-
+    <nav class="navbar">
+        <div class="navbar__container">
+            <a class="navbar__container__brand" href="#inicio">
+                <img class="" src="assets/images/logo.svg" alt="Logo Mi Emprendimiento Web">
+            </a>
+            <button id="btn-togler" class="navbar__container__toggler" type="button">
+                <span class="fas fa-bars"></span>
+            </button>
+            <div class="navbar__container__collapse">
+                <ul>
+                    <li>
+                        <a href="#">Acerca de</a>
+                    </li>
+                    <li>
+                        <a href="#">Cursos</a>
+                    </li>
+                    <li>
+                        <a href="#">Precios</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 </body>
 
 </html>
