ADD: avances grid

--- a/index.html
+++ b/index.html
@@ -33,6 +33,28 @@
             </div>
         </div>
     </nav>
+    <header class="header">
+    </header>
+
+    <main class="container-grid">
+        <section class="container-grid__section">
+            <article>
+                
+            </article>
+            <article>
+
+            </article>
+        </section>
+        <section class="container-grid__section">
+            <article></article>
+        </section>
+    </main>
+
+    <footer>
+
+    </footer>
+
+
 </body>
 
 </html>
